Update fundamentals lesson example to webgl 2

--- a/01-fundamentals/01-what-is-webgl/index.html
+++ b/01-fundamentals/01-what-is-webgl/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>WebGL Core Concepts</title>
+        <title>WebGL 2 Core Concepts</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <canvas id="webgl-canvas"></canvas>
         <div id="info">
-            <h1>WebGL Core Concepts</h1>
+            <h1>WebGL 2 Core Concepts</h1>
             <div id="capabilities"></div>
         </div>
         <script src="index.js"></script>
